# rotary-controller-python

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  README.md  config.ini  flake.nix  main.kv  main.py  pyproject.toml  requirements.txt  start.sh  test.py  todo.md
.github/workflows/: dev.yml  main.yml  release.yml  simple.yml
.run/: Main.run.xml
components/: appsettings.kv  appsettings.py  coordbar.kv  coordbar.py  directindexing.kv  directindexing.py  jog.kv  jog.py  keypad.kv  keypad.py  labelbutton.kv  labelbutton.py  labelcheckbox.kv  labelcheckbox.py  rotarybar.kv  rotarybar.py  servobar.py  statusbar.kv  synchro.kv  synchro.py  toolbar.kv  toolbar.py  viewpopup.py
data/: inputs.json
rcp/: app.py  feeds.py  main.py
rcp/components/: appsettings.py  coordbar.py  elsbar.kv  elsbar.py  feeds_popup.kv  feeds_popup.py  keypad.kv  keypad.py  manager.py  servobar.kv  statusbar.kv
rcp/dispatchers/: __init__.py  axis.py  axis_transform.py  board.py  circle_pattern.py  els.py  formats.py  input.py  line_pattern.py  rcb.py  rect_pattern.py  saving_dispatcher.py  scale.py  servo.py
rcp/help/: angle_degrees.md  axis_name.md  colors.md  display_font.md  els_axis_roles.md  els_mode.md  enable_wifi.md  error_reporting.md  font_size.md  format_digits.md  hide_mouse_cursor.md  lead_screw_pitch.md  network_connection.md  position_tolerance.md  scale_input.md  scales.md  servo_acceleration.md  servo_gearing.md  servo_max_speed.md  software_update.md  spindle_mode.md  sync_ratio.md  system_storage.md  transform_type.md  units_per_turn.md  volume.md  weights.md
rcp/network/: __init__.py  models.py  test.py
rcp/utils/: base_device.py  communication.py  devices.py  kv_loader.py  platform.py
rotary_controller_python/: config.py  device_event_dispatcher.py  input_class.py  main.kv  main.py  servo_class.py  servo_data.py  status_data.py  test.py
rotary_controller_python/components/: appsettings.py  coordbar.kv  coordbar.py  directindexing.kv  directindexing.py  jog.py  keypad.kv  keypad.py  labelbutton.kv  labelbutton.py  ledbutton.kv  ledbutton.py  servobar.kv  servobar.py  setup.kv  setup.py  statusbar.kv  statusbar.py  synchro.kv  synchro.py  toolbar.kv  toolbar.py  viewpopup.kv
rotary_controller_python/configurator/: __init__.py
rotary_controller_python/data/: rotary.json  units.json
rotary_controller_python/dispatchers/: __init__.py  circle_pattern.py  formats.py  scale.py  servo.py
rotary_controller_python/help/: scales.rst
rotary_controller_python/network/: __init__.py  models.py  networkmanager.py  test.py
rotary_controller_python/templates/: interfaces.jinja2  test.py
systemd/: rotary-controller.service
tests/: test_feeds.py  test_kv_loader.py  test_kv_syntax.py
utils/: bitfields.py  communication.py  structures.py
(+245 files in other folders)
