[project]
name = "rcp"
version = "1.0.20"
description = "Rotary Controller Python"
authors = [
    { name = "Stefano Bertelli", email = "stefano@provvedo.com" }
]
requires-python = ">=3.10,<4.0"
license = "MIT"
readme = "README.md"
dependencies = [
    "cachetools>=5.5.0",
    "coverage>=7.6.9",
    "keke>=0.1.4",
    "kivy>=2.3.0",
    "minimalmodbus>=2.1.1",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "python-semantic-release>=9.15.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
rcp = "rcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
patch_without_tag = true
branch = "main"
hvcs = "github"
remove_dist = false
upload_to_pypi = false
build_command = "uv build"
preselease = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "rc"


